--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+	background-color: #85ceff;
+}
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+* {
+	font-family: 'Roboto', sans-serif;
+}
